# arc-lab

./: .gitignore  README.md
mother-duck-rag/back/: .env.example  Makefile  README.md  pyproject.toml
mother-duck-rag/back/api/: __init__.py  agent.py  main.py
mother-duck-rag/back/docs/: ENTENDENDO_O_RAG.md
mother-duck-rag/back/queries/: find_backlinks.sql  find_connections.sql  hidden_connections.sql  semantic_search.sql
mother-duck-rag/back/scripts/: ingest.py  query.py
mother-duck-rag/back/src/: __init__.py
mother-duck-rag/back/src/database/: __init__.py  ingestion.py  schema.py
mother-duck-rag/back/src/embeddings/: embedder.py
mother-duck-rag/back/src/parsers/: __init__.py  chunker.py  link_extractor.py  markdown_parser.py
mother-duck-rag/back/test_vault/: nota-de-teste.md  outra-nota.md
mother-duck-rag/docs/: OBSIDIAN_VAULT_STRUCTURE.md
mother-duck-rag/front/: .env.example  index.html  package-lock.json  package.json
mother-duck-rag/front/src/: App.css  App.tsx  GraphView.tsx  api.ts  index.css
mother-duck-rag/vault_template/: README.md
mother-duck-rag/vault_template/00-MOCs/: AI.md  Learning.md
mother-duck-rag/vault_template/02-Learning/Books/: atomic-habits-ch1.md
mother-duck-rag/vault_template/02-Learning/Courses/: ml-basics-week1.md
mother-duck-rag/vault_template/02-Learning/Talks/: llm-ops-conference.md
mother-duck-rag/vault_template/04-Slipbox/: agentic-ai-overview.md  habit-stacking.md  rag-pattern.md  systems-vs-goals.md
mother-duck-rag/vault_template/_templates/: Book note.md  Course note.md  Slipbox note.md  Talk note.md
